--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
-    <p>Bienvenido a tu primera página web estática en Azure.</p>
+    <p>Lo mas Petardo del mundo.</p>
 </body>
 </html>
